Page Info (native Mac): remove images from accessibility order

Images are accompanied by descriptive text, so it is unnecessary for them to be int he accessibility order. (Currently, they are also read as "image", which is not useful.)

BUG=660239

Review-Url: https://codereview.chromium.org/2478733002
Cr-Commit-Position: refs/heads/master@{#431068}

Former-commit-id: b8160f6a36c45ec4fc0cdfb9d47ebffcb2bafa69